--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>星际牛仔</title>
     <style>
         img{
@@ -12,7 +12,17 @@
     </style>
 </head>
 <body>
-    <h1>
+    <nav>
+        <ol>
+            <li><a href="#cowboy">动画简介</a></li>
+            <li><a href="#story">剧情简介</a></li>
+            <li><a href="#members">波普号成员</a></li>
+            <li><a href="#title">剧集特色标题</a></li>
+            <li><a href="#music">动画音乐</a></li>
+            <li><a href="#photo">动画海报</a></li>
+        </ol>
+    </nav>
+    <h1 id="cowboy">
         动画《星际牛仔》
     </h1>
         
@@ -26,7 +36,7 @@
        在日本本土和欧美市场取得了一定的艺术和商业上的成功。
    </p> 
 
-   <h2>
+   <h2 id="story">
        剧情简介
    </h2>
      <hr>
@@ -41,7 +51,7 @@
        从此，四人一狗游荡在广阔之宇宙之中，在自己与他人的生活中经历著种种悲欢离合，也寻找著各自的过去。
      </p>
    <section>
-     <h2>
+     <h2 id="members">
         波普号成员
      </h2>
      <hr>
@@ -100,7 +110,7 @@
      </p>
    </section>
    <p>
-       <h2>
+       <h2 id="title">
            剧集特色标题
        </h2>
        <hr>
@@ -198,7 +208,7 @@
    
    </p>
 
-   <h2>
+   <h2 id="music">
        动画音乐
    </h2>
    <hr>
@@ -229,15 +239,35 @@
 
     </li>
 </ol>
- <h2> 动画海报
+ <h2 id="photo"> 动画海报
 </h2>
  <hr>
 
-    <div><img width="800" src="images/3.jpg" alt="图3"></div>
-    <div><img width="800" src="images/2.jpg" alt="图2"></div>
-    <div><img width="800" src="images/1.jpg" alt="图1"></div>
-    <div><img width="800" src="images/4.jpg" alt="图4"></div>
-    <div><img width="800" src="images/5.jpg" alt="图5"></div>
+    <div>
+        <a href="images/3.jpg" target="_blank">
+            <img width="800" src="images/3.jpg" alt="图3">
+        </a>
+    </div>
+    <div>
+        <a href="images/2.jpg" target="_blank">
+            <img width="800" src="images/2.jpg" alt="图2">
+        </a>
+    </div>
+    <div>
+        <a href="images/1.jpg" target="_blank">
+            <img width="800" src="images/1.jpg" alt="图1">
+        </a>
+    </div>
+    <div>
+        <a href="images/4.jpg" target="_blank">
+            <img width="800" src="images/4.jpg" alt="图4">
+        </a>
+    </div>
+    <div>
+        <a href="images/5.jpg" target="_blank">
+            <img width="800" src="images/5.jpg" alt="图5">
+        </a>
+    </div>
 
    
 </body>
